--- a/package.json
+++ b/package.json
@@ -2,6 +2,7 @@
   "name": "desafio04backnd",
   "version": "1.0.0",
   "description": "",
+  "type": "module",
   "main": "index.js",
   "scripts": {
     "test": "echo \"Error: no test specified\" && exit 1"
@@ -12,6 +13,8 @@
   "dependencies": {
     "express": "^4.18.2",
     "express-handlebars": "^7.1.2",
-    "socket.io": "^4.7.2"
+    "nodemon": "^3.0.2",
+    "socket.io": "^4.7.2",
+    "uuid": "^9.0.1"
   }
 }
